# Battery_Management

./: CMakeLists.txt  Latest_gtest_output.txt  README.md
BatteryMonitor/: BatteryMonitor.cpp  BatteryMonitor.h  BatteryMonitor.hpp  main.cpp  test_battery_monitor.cpp
